<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/telegrambackground">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.5"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="85dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"/>

        <EditText
            android:id="@+id/nickname"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/nickname"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/repeatpassword"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="70dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_color"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clickRegistered"
            android:layout_gravity="right"
            android:text="@string/already_registered_click_here"
            android:layout_marginRight="80dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>