<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/primary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white"
        android:background="@drawable/background_icon"
        android:src="@drawable/ic_round_arrow_back_ios_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/backIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIcon"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backIcon">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parent">
            <EditText
                android:id="@+id/username"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_input"
                android:drawableLeft="@drawable/ic_round_router_24"
                android:drawablePadding="10dp"
                android:hint="@string/edit_server_address"
                android:padding="20dp"
                android:textColor="@color/text_typing"
                android:textColorHint="@color/text_input"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/new_address"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:text="Save new address"
                android:textStyle="bold"
                android:backgroundTint="@color/btn_color"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:text="@string/color_mode"
                android:textSize="16dp"
                android:textColor="@color/color_mode_text"
                android:textStyle="bold"
                />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>